--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,14 @@
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
+    "baseUrl": "src/",
+    
     "resolveJsonModule": true,
     "strict": true
-  }
+  },
+  "paths": {
+      "src/*": ["./*"],
+    },
+  "include": ["src"],
+	"exclude": ["node_modules","**/*.spec.ts"],
 }
