--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@ui-kitten/components": "^5.0.0",
+    "@wwdrew/react-native-numeric-textinput": "^1.1.0",
+    "accounting": "^0.4.1",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
-    "expo-font": "^8.2.1",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "native-base": "^2.13.13",
     "react": "~16.11.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.11.7",
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/accounting": "^0.4.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "typescript": "~3.9.5"
