--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "noEmit": true,
     "skipLibCheck": true,
     "baseUrl": "src/",
-    
+    "types": [".ts",".tsx",".js"], 
     "resolveJsonModule": true,
     "strict": true
   },
