--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/accounting": "^0.4.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~3.9.5"
   },
   "private": true
