--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "noEmit": true,
     "skipLibCheck": true,
     "baseUrl": "src/",
-    "types": [".ts",".tsx",".js"], 
+    "types": [".ts",".tsx",".js",".d.ts"], 
+    "typeRoots": ["types","./src/interfaces/*"],
     "resolveJsonModule": true,
     "strict": true
   },
@@ -15,5 +16,5 @@
       "src/*": ["./*"],
     },
   "include": ["src"],
-	"exclude": ["node_modules","**/*.spec.ts"],
+	"exclude": ["node_modules","**/*.spec.ts","declarations"],
 }
