--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.13",
     "react": "~16.11.0",
     "react-currency-input": "^1.3.6",
