--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.1",
+    "@react-navigation/stack": "^5.7.1",
     "@ui-kitten/components": "^5.0.0",
     "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "accounting": "^0.4.1",
@@ -19,10 +22,17 @@
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.13",
     "react": "~16.11.0",
+    "react-content-loader": "^5.1.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-svg": "12.1.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-shimmer": "^0.6.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-animated-linear-gradient": "^0.4.0",
     "react-native-web": "~0.11.7",
     "react-number-format": "^4.4.1"
   },
