--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "accounting": "^0.4.1",
     "axios": "^0.19.2",
-    "expo": "~38.0.8",
+    "expo": "^38.0.8",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "lottie-react-native": "^3.5.0",
