--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@types/accounting": "^0.4.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "babel-plugin-module-resolver": "^4.0.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-typescript-transformer": "^1.2.13",
     "typescript": "~3.9.5"
   },
   "private": true
