--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,12 @@
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
-    "baseUrl": "src/",
+    "baseUrl": "src",
     "types": [".ts",".tsx",".js",".d.ts"], 
     "typeRoots": ["types","./src/interfaces/*"],
     "resolveJsonModule": true,
     "strict": true
   },
-  "paths": {
-      "src/*": ["./*"],
-    },
-  "include": ["src"],
+  "include": ["./src"],
 	"exclude": ["node_modules","**/*.spec.ts","declarations"],
 }
