--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "AftimCalcula",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
@@ -16,33 +18,44 @@
     "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "accounting": "^0.4.1",
     "axios": "^0.19.2",
-    "expo": "^38.0.8",
-    "expo-font": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.13",
-    "react": "~16.11.0",
+    "react": "16.13.1",
     "react-content-loader": "^5.1.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "0.63.2",
+    "react-native-change-icon": "^2.0.3",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-shimmer": "^0.6.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-animated-linear-gradient": "^0.4.0",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-number-format": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.10.5",
+    "@babel/runtime": "^7.10.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/accounting": "^0.4.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "babel-jest": "^26.2.1",
+    "eslint": "^7.5.0",
+    "jest": "^26.2.1",
+    "jetifier": "^1.6.6",
+    "metro-react-native-babel-preset": "^0.61.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-test-renderer": "16.13.1",
     "typescript": "~3.9.5"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
