--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,24 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#fbed80",
-    "activityBar.activeBorder": "#06b9a5",
-    "activityBar.background": "#fbed80",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#06b9a5",
+    "activityBar.activeBackground": "#1569a2",
+    "activityBar.activeBorder": "#ed72bb",
+    "activityBar.background": "#1569a2",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#ed72bb",
     "activityBarBadge.foreground": "#15202b",
-    "statusBar.background": "#f9e64f",
-    "statusBar.border": "#f9e64f",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#f7df1e",
-    "tab.activeBorder": "#fbed80",
-    "titleBar.activeBackground": "#f9e64f",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.border": "#f9e64f",
-    "titleBar.inactiveBackground": "#f9e64f99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "statusBar.background": "#0f4c75",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1569a2",
+    "tab.activeBorder": "#1569a2",
+    "titleBar.activeBackground": "#0f4c75",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#0f4c7599",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
 
 "http.proxyStrictSSL": true,
-  "peacock.color": "#f9e64f",
+  "peacock.color": "#0f4c75",
   "launch": {
 
     "configurations": [],
