--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AftimCalcula",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/clipboard": "^1.2.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
@@ -18,23 +20,25 @@
     "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "accounting": "^0.4.1",
     "axios": "^0.19.2",
+    "fbjs": "^2.0.0",
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.13",
     "react": "16.13.1",
     "react-content-loader": "^5.1.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "~16.11.0",
-    "react-native": "0.63.2",
+    "react-native": "^0.63.2",
+    "react-native-appearance": "^0.3.4",
     "react-native-change-icon": "^2.0.3",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "~1.9.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-shimmer": "^0.6.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-animated-linear-gradient": "^0.4.0",
-    "react-native-unimodules": "~0.10.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-number-format": "^4.4.1"
@@ -46,19 +50,14 @@
     "@types/accounting": "^0.4.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
-<<<<<<< HEAD
-    "babel-plugin-module-resolver": "^4.0.0",
-    "react-native-svg-transformer": "^0.14.3",
-    "react-native-typescript-transformer": "^1.2.13",
-=======
     "babel-jest": "^26.2.1",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.5.0",
     "jest": "^26.2.1",
     "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "^0.61.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
->>>>>>> e77e554ad034175d04625d701c1c28358601ee0e
     "typescript": "~3.9.5"
   },
   "jest": {
