--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # OSX
 #
+note
 .DS_Store
 .vscode
 # Xcode
@@ -15,7 +16,6 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-android/*
 ios/*
 # macOS
 .DS_Store
