--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
-    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/clipboard": "^1.2.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@ui-kitten/components": "^5.0.0",
     "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "accounting": "^0.4.1",
     "axios": "^0.19.2",
     "fbjs": "^2.0.0",
+    "lodash": "^4.17.20",
+    "lodash.debounce": "^4.0.8",
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.13",
     "react": "16.13.1",
